--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -14,6 +14,7 @@ jobs:
 
   build-test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -31,6 +32,34 @@ jobs:
           restore-keys: |
             maven-${{ runner.os }}-
 
+      # 🔹 Instala Docker Compose V2
+      - name: Instalar Docker Compose V2
+        run: |
+          mkdir -p ~/.docker/cli-plugins/
+          URL="https://github.com/docker/compose/releases/download/v2.24.6"
+          FILE="docker-compose-linux-x86_64"
+          curl -SL "$URL/$FILE" -o ~/.docker/cli-plugins/docker-compose
+          chmod +x ~/.docker/cli-plugins/docker-compose
+
+      # 🔹 Sobe LocalStack (e dependências)
+      - name: Subir dependências (LocalStack)
+        run: docker compose -f docker-compose.yml up -d
+
+      # 🔹 Aguarda LocalStack ficar pronto
+      - name: Aguardar LocalStack
+        run: |
+          echo "Aguardando LocalStack..."
+          for i in {1..30}; do
+            if curl -s http://localhost:4566/_localstack/health > /dev/null; then
+              echo "LocalStack pronto!"
+              exit 0
+            fi
+            sleep 5
+          done
+          echo "LocalStack não iniciou a tempo"
+          exit 1
+
+      # 🔹 Agora os testes funcionam
       - name: Build com testes e Jacoco
         run: mvn clean test jacoco:report
 
@@ -43,9 +72,15 @@ jobs:
       - name: Gerar JAR para o Docker
         run: mvn clean package -DskipTests
 
+      # 🔹 Cleanup (boa prática)
+      - name: Derrubar containers
+        if: always()
+        run: docker compose -f docker-compose.yml down
+
   docker:
     runs-on: ubuntu-latest
     needs: build-test
+
     steps:
       - uses: actions/checkout@v4
 
@@ -64,13 +99,15 @@ jobs:
         run: docker compose -f docker-compose.yml config
 
       - name: Build da imagem com Docker Compose
-        run: docker compose -f docker-compose.yml
+        run: docker compose -f docker-compose.yml build
 
   pr-dev:
     runs-on: ubuntu-latest
     needs: docker
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Criar Pull Request para Dev
         uses: peter-evans/create-pull-request@v6
         with:
