--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -39,18 +39,27 @@ jobs:
       - name: Aguardar LocalStack ficar saudável
         run: |
           echo "Aguardando LocalStack..."
-          for i in {1..30}; do
-          STATUS=$(docker compose ps --format json orchestrator-localstack | jq -r '.[0].Health')
-          if [ "$STATUS" = "healthy" ]; then
-           echo "LocalStack pronto!"
-           exit 0
+          
+          CONTAINER_ID=$(docker compose ps -q orchestrator-localstack)
+          
+          if [ -z "$CONTAINER_ID" ]; then
+            echo "Container do LocalStack não encontrado"
+            docker compose ps
+            exit 1
           fi
-          sleep 5
+          
+          for i in {1..30}; do
+            STATUS=$(docker inspect --format='{{.State.Health.Status}}' "$CONTAINER_ID" || true)
+            if [ "$STATUS" = "healthy" ]; then
+              echo "LocalStack pronto!"
+              exit 0
+            fi
+            sleep 5
           done
           
           echo "LocalStack não ficou saudável a tempo"
-          docker compose logs orchestrator-localstack
-          exit 1      
+          docker logs "$CONTAINER_ID"
+          exit 1   
 
       - name: Rodar testes (unit + integration)
         run: mvn clean verify
