--- a/.github/workflows/ci-feature.yml
+++ b/.github/workflows/ci-feature.yml
@@ -42,8 +42,17 @@ jobs:
       - name: Aguardar LocalStack ficar saudável
         run: |
           echo "Aguardando LocalStack..."
+          
+          CONTAINER_ID=$(docker compose ps -q orchestrator-localstack)
+          
+          if [ -z "$CONTAINER_ID" ]; then
+            echo "Container do LocalStack não encontrado"
+            docker compose ps
+            exit 1
+          fi
+          
           for i in {1..30}; do
-            STATUS=$(docker compose ps --format json orchestrator-localstack | jq -r '.[0].Health')
+            STATUS=$(docker inspect --format='{{.State.Health.Status}}' "$CONTAINER_ID" || true)
             if [ "$STATUS" = "healthy" ]; then
               echo "LocalStack pronto!"
               exit 0
@@ -52,9 +61,8 @@ jobs:
           done
           
           echo "LocalStack não ficou saudável a tempo"
-          docker compose logs orchestrator-localstack
+          docker logs "$CONTAINER_ID"
           exit 1
-      
 
       - name: Rodar testes (unit + integration)
         run: mvn clean verify
