--- a/infra/k8s/service-account.yaml
+++ b/infra/k8s/service-account.yaml
@@ -4,4 +4,4 @@ metadata:
   name: ms-orchestrator-sa
   namespace: default
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::<ACCOUNT_ID>:role/ms-orchestrator-irsa #Todo: Ajustar id
+    eks.amazonaws.com/role-arn: arn:aws:iam::056075870573:role/ms-orchestrator-irsa
